# dpdk-qos-scheduler

./: .gitignore  LICENSE  README.md  meson.build
docs/: design.md  interview_notes.md  test_plan.md
include/: config.hpp  dpdk_port.hpp  drr_scheduler.hpp  flow_classifier.hpp  flow_key.hpp  packet_parser.hpp  qos_queue.hpp  scheduler.hpp  sp_scheduler.hpp  stats.hpp  wrr_scheduler.hpp
scripts/: bind_nic.sh  run_example.sh  setup_hugepages.sh
src/: dpdk_port.cpp  drr_scheduler.cpp  flow_classifier.cpp  main.cpp  packet_parser.cpp  qos_queue.cpp  sp_scheduler.cpp  stats.cpp  wrr_scheduler.cpp
